--- a/docker/hooks/build
+++ b/docker/hooks/build
@@ -1,2 +1,5 @@
 #!/bin/sh
-docker build --build-arg BW_BRANCH=$BW_BRANCH --build-arg BW_REPOSITORY=$BW_REPOSITORY -t $IMAGE_NAME .
+if [ "$DOCKER_TAG" = "dev" ]
+  then docker build --build-arg BW_BRANCH="develop" --build-arg BW_REPOSITORY=$BW_REPOSITORY -f $DOCKERFILE_PATH -t $IMAGE_NAME .
+  else docker build --build-arg BW_BRANCH=$BW_BRANCH --build-arg BW_REPOSITORY=$BW_REPOSITORY -f $DOCKERFILE_PATH -t $IMAGE_NAME .
+fi
